syntax = "proto3";

option csharp_namespace = "Grpc_Client";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc SaveResultPrimes (ResultRequest) returns (ResultReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message ResultRequest{
	string info = 1;
}

message ResultReply{
	string info = 1;
}
